--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- JavaScript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="index.js"></script>    
+        <script src="js/script.js"></script>    
     </body>
 </html>
 
